--- a/project/src/css-(styles)/style.css
+++ b/project/src/css-(styles)/style.css
@@ -122,13 +122,13 @@ nav .li1 img:hover {
 }
 
 #TheBestGallery {
-  height: 220px;
+  height: 200px;
   width: 100%;
   background-color: #251139;
 }
 #TheBestGallery h1 {
-  font-size: 190px;
-  margin-left: 30%;
+  font-size: 150px;
+  margin-left: 15%;
   font-weight: 900;
   background-image: url("https://i.pinimg.com/736x/0c/66/19/0c6619872a2ffaba4bd939d82dd2ce66.jpg");
   -webkit-background-clip: text;
@@ -728,8 +728,8 @@ footer p {
     border-radius: 30px;
     margin-top: 5%;
     margin-left: 0;
-    height: 250px;
-    width: 250px;
+    height: 300px;
+    width: 500px;
   }
   .art-description {
     margin-left: 0;
@@ -768,7 +768,7 @@ footer p {
   .electrik {
     margin-left: 0;
     margin-top: 20px;
-    padding: 30px;
+    padding: 20px;
     width: 90%;
     border-radius: 30px;
     position: relative;
@@ -795,5 +795,42 @@ footer p {
   }
   .electrik:hover {
     box-shadow: none;
+  }
+  #TheBestGallery {
+    height: 230px;
+  }
+  #TheBestGallery h1 {
+    margin-left: 25%;
+    font-size: 100px;
+  }
+  .catalog-section .catalog-container {
+    display: block;
+  }
+  .catalog-section .catalog-container .catalog-item {
+    width: 100%;
+  }
+  .catalog-section .catalog-container .catalog-item img {
+    width: 90%;
+    align-items: center;
+    height: 400px;
+  }
+  .catalog-section .catalog-container .catalog-item h3 {
+    align-items: center;
+    width: 100%;
+  }
+  .catalog-section .catalog-container .catalog-item .myP {
+    align-items: center;
+    width: 100%;
+  }
+  #plitka section {
+    display: block;
+  }
+  #plitka section .ul-one li img {
+    width: 700px;
+    margin-left: 5%;
+  }
+  #plitka section .ul2 li {
+    width: 600px;
+    margin-left: 10%;
   }
 }/*# sourceMappingURL=style.css.map */
