--- a/project/src/css-(styles)/style.scss
+++ b/project/src/css-(styles)/style.scss
@@ -128,12 +128,12 @@ nav {
 }
 
 #TheBestGallery {
-	height: 220px;
+	height: 200px;
 	width: 100%;
 	background-color: #251139;
 	h1 {
-		font-size: 190px;
-		margin-left: 30%;
+		font-size: 150px;
+		margin-left: 15%;
 		font-weight: 900;
 		background-image: url('https://i.pinimg.com/736x/0c/66/19/0c6619872a2ffaba4bd939d82dd2ce66.jpg');
 		background-clip: text;
@@ -773,8 +773,8 @@ footer {
 		border-radius: 30px;
 		margin-top: 5%;
 		margin-left: 0;
-		height: 250px;
-		width: 250px;
+		height: 300px;
+		width: 500px;
 	}
 
 	.art-description {
@@ -820,7 +820,7 @@ footer {
 	.electrik {
 		margin-left: 0;
 		margin-top: 20px;
-		padding: 30px;
+		padding: 20px;
 		width: 90%;
 		border-radius: 30px;
 		position: relative;
@@ -853,5 +853,54 @@ footer {
 
 	.electrik:hover {
 		box-shadow: none;
+	}
+	#TheBestGallery {
+		height: 230px;
+		h1 {
+			margin-left: 25%;
+			font-size: 100px;
+		}
+	}
+	.catalog-section {
+		.catalog-container {
+			display: block;
+			.catalog-item {
+				width: 100%;
+				img {
+					width: 90%;
+					align-items: center;
+					height: 400px;
+				}
+	
+				h3 {
+					align-items: center;
+					width: 100%;
+				}
+	
+				.myP {
+					align-items: center;
+					width: 100%;
+				}
+			}
+		}
+	}
+	#plitka {
+		section {
+			display: block;
+			.ul-one {
+				li {
+					img {
+						width: 700px;
+						margin-left: 5%;
+					}
+				}
+			}
+			.ul2 {
+				li {
+					width: 600px;
+					margin-left: 10%;
+				}
+			}
+		}
 	}
 }
