--- a/project/src/css-(styles)/style.css
+++ b/project/src/css-(styles)/style.css
@@ -594,6 +594,8 @@ footer p {
   display: flex;
 }
 #art-box img {
+  -o-object-fit: cover;
+     object-fit: cover;
   border-radius: 50px;
   margin-top: 2%;
   margin-left: 10%;
@@ -725,6 +727,8 @@ footer p {
     align-items: center;
   }
   #art-box img {
+    -o-object-fit: cover;
+       object-fit: cover;
     border-radius: 30px;
     margin-top: 5%;
     margin-left: 0;
@@ -832,5 +836,87 @@ footer p {
   #plitka section .ul2 li {
     width: 600px;
     margin-left: 10%;
+  }
+}
+@media (max-width: 426px) {
+  #elektrik-conteiner {
+    height: 800px;
+  }
+  #elektrik-conteiner p {
+    text-decoration: none;
+    font-family: "Roboto";
+    font-size: 20px;
+    margin-top: 80%;
+    margin-left: 2%;
+    width: 90%;
+  }
+  #elektrik-conteiner .electrik {
+    padding: 20px;
+    margin-top: 20%;
+    margin-left: 0px;
+    height: auto;
+    align-items: center;
+    width: 90%;
+  }
+  #elektrik-conteiner .electrik img {
+    width: 280px;
+  }
+  .qa {
+    padding-left: 15%;
+    align-items: center;
+  }
+  .question {
+    width: 80%;
+    margin-left: 50px;
+    text-align: center;
+  }
+  .answer {
+    width: 80%;
+  }
+  #art-box {
+    padding-bottom: 25%;
+  }
+  #art-box img {
+    width: 90%;
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
+  #plitka {
+    padding-top: 2%;
+    padding-bottom: 2%;
+  }
+  #plitka section {
+    flex-direction: column;
+  }
+  #plitka section .ul-one li img {
+    -o-object-fit: cover;
+       object-fit: cover;
+    padding: 5px;
+    max-height: 250px;
+    width: 90%;
+    border-radius: 20px;
+  }
+  #plitka section .ul2 li {
+    margin-top: 5%;
+    border-radius: 20px;
+    padding: 10px;
+    width: 80%;
+  }
+  #plitka section .ul2 li h1 {
+    font-size: 24px;
+  }
+  #plitka section .ul2 li .li-p {
+    font-size: 16px;
+    padding: 15px;
+  }
+  #plitka section .ul2 li .btn {
+    font-size: 18px;
+    padding: 6px 25px;
+  }
+  #plitka section .ul2 li .btn:after {
+    top: -1px;
+    left: -1px;
+    border-top: 5px solid black;
+    border-left: 5px solid black;
   }
 }/*# sourceMappingURL=style.css.map */
