--- a/project/src/css-(styles)/style.scss
+++ b/project/src/css-(styles)/style.scss
@@ -636,6 +636,7 @@ footer {
 	padding-bottom: 10%;
 	display: flex;
 	img {
+		object-fit: cover;
 		border-radius: 50px;
 		margin-top: 2%;
 		margin-left: 10%;
@@ -770,6 +771,7 @@ footer {
 	}
 
 	#art-box img {
+		object-fit: cover;
 		border-radius: 30px;
 		margin-top: 5%;
 		margin-left: 0;
@@ -871,12 +873,12 @@ footer {
 					align-items: center;
 					height: 400px;
 				}
-	
+
 				h3 {
 					align-items: center;
 					width: 100%;
 				}
-	
+
 				.myP {
 					align-items: center;
 					width: 100%;
@@ -899,6 +901,93 @@ footer {
 				li {
 					width: 600px;
 					margin-left: 10%;
+				}
+			}
+		}
+	}
+}
+
+@media (max-width: 426px) {
+	#elektrik-conteiner {
+		height: 800px;
+		p {
+			text-decoration: none;
+			font-family: 'Roboto';
+			font-size: 20px;
+			margin-top: 80%;
+			margin-left: 2%;
+			width: 90%;
+		}
+		.electrik {
+			padding: 20px;
+			margin-top: 20%;
+			margin-left: 0px;
+			height: auto;
+			align-items: center;
+			width: 90%;
+			img {
+				width: 280px;
+			}
+		}
+	}
+	.qa {
+		padding-left: 15%;
+		align-items: center;
+	}
+	.question {
+		width: 80%;
+		margin-left: 50px;
+		text-align: center;
+	}
+	.answer {
+		width: 80%;
+	}
+	#art-box {
+		padding-bottom: 25%;
+		img {
+			width: 90%;
+			object-fit: cover;
+		}
+	}
+	#plitka {
+		padding-top: 2%;
+		padding-bottom: 2%;
+		section {
+			flex-direction: column;
+			.ul-one {
+				li {
+					img {
+						object-fit: cover;
+						padding: 5px;
+						max-height: 250px;
+						width: 90%;
+						border-radius: 20px;
+					}
+				}
+			}
+			.ul2 {
+				li {
+					margin-top: 5%;
+					border-radius: 20px;
+					padding: 10px;
+					width: 80%;
+					h1 {
+						font-size: 24px;
+					}
+					.li-p {
+						font-size: 16px;
+						padding: 15px;
+					}
+					.btn {
+						font-size: 18px;
+						padding: 6px 25px;
+					}
+					.btn:after {
+						top: -1px;
+						left: -1px;
+						border-top: 5px solid black;
+						border-left: 5px solid black;
+					}
 				}
 			}
 		}
